--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-</head>
-<body>
-    <p>index</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>じあえんそ</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div id="header">
+            <h1>じあえんそ</h1>
+        </div>
+        <div class="main">
+            <h2>なんなんこのサイト</h2>
+            <p>俺にもわからん</p>
+        </div>
+        <div class="main">
+            <h2>デザインもくそもねぇな</h2>
+            <p>はい</p>
+        </div>
+    </body>
 </html>
