--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>じあえんそ</title>
         <link rel="stylesheet" href="style.css">
+        <script src="test.js"></script>
     </head>
     <body>
         <div id="header">
@@ -16,6 +17,13 @@
         <div class="main">
             <h2>デザインもくそもねぇな</h2>
             <p>はい</p>
+        </div>
+        <div class="main">
+            <h2>これしかないの？</h2>
+            <p>hai</p>
+        </div>
+        <div class="main">
+        <h2>これはJSの<a href="#" onclick="jstest()">テスト</a>です</h2>
         </div>
     </body>
 </html>
