--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
-<html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <title>じあえんそ</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="test.js"></script>
-    </head>
-    <body>
-        <div id="header">
-            <h1>じあえんそ</h1>
-        </div>
-        <div class="main">
-            <h2>なんなんこのサイト</h2>
-            <p>俺にもわからん</p>
-        </div>
-        <div class="main">
-            <h2>デザインもくそもねぇな</h2>
-            <p>はい</p>
-        </div>
-        <div class="main">
-            <h2>これしかないの？</h2>
-            <p>hai</p>
-        </div>
-        <div class="main">
-        <h2>これはJSの<a href="#" onclick="jstest()">テスト</a>です</h2>
-        </div>
-    </body>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta lang="ja">
+  <title>TIMES</title>
+  <link rel="stylesheet" href="style.css">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="percentage.js"></script>
+</head>
+<body>
+    <div class="container">
+      <h1>現在時刻</h1>
+      <div class="time-container">
+        <span id="time"></span>
+        <span id="day"></span>
+      </div>
+      <div class="copy">
+        <a href="http://twitter.com/ziaenso_">&copy; 2023 Ziaenso_</a>
+      </div>
+    </div>
+  </body>
 </html>
