--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>現在時刻</h1>
       <div class="time-container">
         <span id="time"></span>
+        <span id="unix"></span>
         <span id="day"></span>
       </div>
       <div class="copy">
